--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "js-file-download": "^0.4.12",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "react": "19.1.0",
