--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.1.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.3",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
