--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.35.0",
     "axios": "^1.12.2",
     "dompurify": "^3.3.0",
     "embla-carousel-autoplay": "^8.6.0",
